--- a/Carousel/tsconfig.json
+++ b/Carousel/tsconfig.json
@@ -22,6 +22,11 @@
 			"@/*": ["*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		"src/components/carousel/carousel.jsx"
+	],
 	"exclude": ["node_modules"]
 }
