--- a/Modal/.prettierrc
+++ b/Modal/.prettierrc
@@ -5,7 +5,5 @@
   "tabWidth": 2,
   "trailingComma": "all",
   "printWidth": 100,
-  "arrowParens": "always",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false
+  "arrowParens": "always"
 }
