--- a/electric_charger_info/package.json
+++ b/electric_charger_info/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "prettier": "^3.3.3",
     "typescript": "^5"
   },
   "packageManager": "yarn@3.3.1+sha512.e355f587284d06d2c0c1c2259c68746aa1f1f6cdeedefce543cec206709beeb7951c0a27cdbfb7b5736a576854829af9c660bbe82052192c49f108a546994b71"
